translation-tool/inputs/source_meta/objects/HSvc_SDD_CMCBandwidthAdditionalInfo__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <label>Available</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingDealName__c</fullName>
        <label>Billing Deal Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMC__c</fullName>
        <label>CMC</label>
        <referenceTo>HSvc_CMC__c</referenceTo>
        <relationshipLabel>CMC Bandwidth Additional Info</relationshipLabel>
        <relationshipName>CMC_Bandwidth_Additional_Info</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <label>Product ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTY__c</fullName>
        <label>QTY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CMC Bandwidth Additional Info</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMC Bandwidth Additional Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>